k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 717958588488.dkr.ecr.eu-north-1.amazonaws.com/task-manager-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
